--- a/src/pages/user/styles/OrderPro.scss
+++ b/src/pages/user/styles/OrderPro.scss
@@ -1,12 +1,12 @@
-.u-logo-header{
-    width: 1045px;
-    border-bottom: 2px solid #000;
-}
+// .u-logo-header{
+//     width: 1045px;
+//     border-bottom: 2px solid #000;
+// }
 
-.u-logo-header > img {
-    width: 190px;
-    padding-bottom: 20px;
-}
+// .u-logo-header > img {
+//     width: 190px;
+//     padding-bottom: 20px;
+// }
 
 /* ----- 大Item  ----- */
 
