--- a/src/pages/user/styles/OrderProDetail.scss
+++ b/src/pages/user/styles/OrderProDetail.scss
@@ -1,5 +1,7 @@
- /* ----- 表單 ----- */
+ 
+/* ----- 表單 ----- */
  .u-box {
+    margin-left: 70px;
     margin-top: 40px;
     width: 1044px;
     height: 254px;
@@ -33,6 +35,10 @@
 }
 
 /* ----- 商品細節 ----- */
+.u-boxPro {
+    margin-left: 70px;
+}
+
 .u-boxPro{
     margin-top: 40px;
     width: 1044px;
@@ -77,15 +83,12 @@
     color: #fff;
 }
 
-
-
-
-
 /* ===== 折疊 ===== */
 .u-Card {
     width: 1044px;
     background-color: #e8e8e8;
     border: #e8e8e8;
+    margin-left: 70px;
     // position: relative;
 }
 
@@ -93,7 +96,8 @@
     background-color: #e8e8e8;
 }
 
-.u-collapse1 {
+.u-collapse {
+  height: 100px;
   border: 2px solid #707070;
 }
 
@@ -120,13 +124,13 @@
 // ===== 回訂單 btn =====
 .u-back {
     width: 180px;
-    height: 50px;
+    height: 55px;
     background-color: #000;
     text-align: center;
-    line-height: 40px;
+    line-height: 45px;
     font-size: 16px;
     margin-top: 30px;
-    margin-left: 450px;
+    margin-left: 500px;
 }
 
 .u-link{
