--- a/src/pages/event/style/event.scss
+++ b/src/pages/event/style/event.scss
@@ -1,7 +1,11 @@
 // Leave Right Side For Navbar
 .reduce-width{
     width: calc(100% - 70px);
-    padding-left: 70;
+}
+
+// leave 70px left paddinf
+.left-padding{
+    padding-left: 70px;
 }
 
 
@@ -23,6 +27,12 @@
     
 }
 
+.m-spin-eye{
+        display: none;
+        margin-top: 20px;
+        margin-left: 300px;
+    }
+
 .spin-eye{
     background: url(../images/arddict-eye-w.svg) no-repeat;;
     width: 120.51px;
@@ -33,17 +43,15 @@
 }
 
 .e-logo-area{
-    width: 40%;
     margin-bottom: 36px;
 }
 
 .e-logo{
     width: 100%;
-    margin-top: 150px;
 }
 
 .e-topic{
-    font-size: 30px;
+    font-size: 1.8rem;
     font-weight: bold;
     color: #81FC4D;
     margin-top: 23px;
@@ -68,6 +76,12 @@
     background-image: url(../images/museum/bathsheba-bathing-1150331_1920.jpg);
     background-size: cover;
     
+}
+
+.e-cover-black{
+    width: 100%;
+    height: 100%;
+    background-color: #0000005b;
 }
 
 .e-hero-card-area{
@@ -121,16 +135,18 @@
 }
 
 .e-line{
-    width: 100%;
-    border-top: 2px solid #81FC4D;
-    transform: rotate(45deg);
-    top: 50%;
+    width: 80%;
+        border-top: 2px solid #81FC4D;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%,-50%) rotate(-45deg);
 }
 .e-line2{
-    width: 100%;
-    border-top: 2px solid #81FC4D;
-    transform: rotate(-45deg);
-    top: 50%;
+    width: 80%;
+        border-top: 2px solid #81FC4D;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%,-50%) rotate(45deg);
 }
 
 // Vol.01 font-size
@@ -155,22 +171,26 @@
 
 .spin-sentence{
     font-size: 40px;
+    margin: 20px 0 20px 0;
 }
 
 .spin-sentence2{
     font-size: 40px;
     color: #1D0AFF ;
+    margin: 20px 0 20px 0;
 }
 
-// !EVENT SECTION
+// !EXHIBITION SECTION
 
 .exhi{
     background-color: white;
 }
 
+.exhi-m-deco{
+    display: none;
+}
+
 .e-select {
-    margin-top: 55px;
-    margin-bottom: 20px;
     font-size: 25px;
 }
 
@@ -191,7 +211,6 @@
     background-color: transparent;
 }
 .e-exhi-event{
-    width: 53%;
     background-image: url(../images/museum/human-663298_1920.jpg);
     background-size: cover;
 
@@ -223,8 +242,6 @@
 // EXHIBITION 標題英文字
 .e-exhi-title{
     font-size: 93px;
-    top: 500px;
-    left: 45%;
 }
 
 //  EXHOBITION ARROW
@@ -254,16 +271,16 @@
 
 
 // EXHOBITION 藍色旋轉眼睛
-.e-spin-eye{
-    top:400px;
-    width: 500px;
-}
+.e-spin-eye-area{
+    width: 100%;
+    left: -250px;
+    bottom: -150px;
 
-.e-blue-eye{
-    top: 200%;
-    left: 51%;
-    transform: translate(-50%, 50%);
-    width: 65%;
+
+}
+.e-spin-eye{
+    width: 100%;
+    height: 100%;
 }
 
 // WORKSHOP
@@ -342,7 +359,7 @@
     top: 50%;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:576px) {
     .reduce-width{
     width: 100%;
     }
@@ -352,17 +369,21 @@
     .hero{
     padding-top: 50px;
     width: 100%;
-    height: 100vh;
     background-color: black;
     position: relative;
     }
 
+    .e-logo-area{
+        display: none;
+    }
+
     .m-spin-eye{
-        margin-top: 25px;
+        margin-top: 20px;
+        margin-left: 300px;
     }
 
     .e-topic{
-    font-size: 0.8rem;
+    font-size: 1.3rem;
     font-weight: bold;
     color: #81FC4D;
     margin-top: 10px;
@@ -438,11 +459,31 @@
     margin: 10px 0 10px 0;
 }
 
-.spin-sentence2{
-    font-size: 1.3rem;
-    color: #1D0AFF ;
-    margin: 10px 0 10px 0;
-}
+    .spin-sentence2{
+        font-size: 1.3rem;
+        color: #1D0AFF ;
+        margin: 10px 0 10px 0;
+    }
+
+    .e-exhi-title{
+        font-size: 2rem;
+    }
+
+    .e-exhi-title::after{
+        width: 0px;
+        height: 0px;
+        display:none
+    }
+
+    .arrow-cap::after{
+        width: 0px;
+        height: 0px;
+        display:none
+    }
+
+    .exhi-m-deco{
+        left: 140%;
+    }
 
 
  
