--- a/src/pages/event/style/event.scss
+++ b/src/pages/event/style/event.scss
@@ -15,7 +15,6 @@
 
 .hero{
     width: 100%;
-    height: 100vh;
     background-color: black;
     position: relative;
 }
@@ -105,7 +104,7 @@
 
 .e-hero-event-font{
     font-size: 20px;
-    font-weight: medium;
+    font-weight: 500;
     color: #81FC4D;
 }
 
@@ -170,15 +169,21 @@
 }
 
 .spin-sentence{
-    font-size: 40px;
+    font-size: 2.5rem;
     margin: 20px 0 20px 0;
 }
 
 .spin-sentence2{
-    font-size: 40px;
+    font-size: 2.5rem;
     color: #1D0AFF ;
     margin: 20px 0 20px 0;
 }
+
+.spin-sentence3{
+        font-size: 2.5rem;
+        color: white ;
+        margin: 20px 0 20px 0;
+    }
 
 // !EXHIBITION SECTION
 
@@ -195,7 +200,7 @@
 }
 
 .e-select-cn{
-    font-weight: medium;
+    font-weight: 500;
 }
 
 
@@ -221,7 +226,7 @@
 }
 
 .e-exhi-name{
-    font-size: 40px;
+    font-size: 2.5rem;
     margin-right: 179px;
     margin-left: auto;
 
@@ -241,7 +246,31 @@
 
 // EXHIBITION 標題英文字
 .e-exhi-title{
-    font-size: 93px;
+    bottom: 150px;
+    right: 400px;
+    font-size: 5.8rem;
+}
+
+.e-exhi-title-cn{
+    font-size: 1.5rem;
+    font-weight: 500;
+
+}
+
+.e-exhi-title-dash{
+    margin-left: 13rem;
+}
+
+.e-exhi-title-dash::before{
+    position: absolute;
+    bottom: .7rem;
+    left: 4rem;
+    content: '';
+    display: block;
+    width: 190px;
+    height: 2px;
+    background: black;
+    // margin-left:400px;
 }
 
 //  EXHOBITION ARROW
@@ -291,7 +320,6 @@
 }
 
 .e-work-hero{
-    width: 58%;
     background-image: url(../images/museum/workhero.jpeg);
     background-size: cover;
 }
@@ -309,30 +337,42 @@
 }
 
 .e-logo-deco-h{
-    width: 40%;
 }
 
 .e-logo-deco{
-    margin-top: 108px;
-    margin-bottom: 133px;
+    margin-top: 250px;
 }
 
 .e-work-content{
+    margin-left: 85px;
     color: white;
-    font-weight: medium;
-    font-size: 20px;
+    font-weight: 500;
+    font-size: 1.3rem;
 }
 
-.e-work-select{
-    margin-top: 55px;
-    margin-bottom: 20px;
-    font-size: 25px;
+.e-work-select {
     color: white;
+    font-size: 25px;
+}
+
+.e-work-select-cn{
+    font-weight: 500;
 }
 
 .e-work1{
     background: url('../images/museum/1440x958_13514121830.jpeg');
-    width: 25%;
+    background-size: cover;
+    background-position: center center;
+}
+
+.e-work2{
+    background: url('../images/museum/student-125813480.jpeg');
+    background-size: cover;
+    background-position: center center;
+}
+
+.e-work3{
+    background: url('../images/museum/nike-666811920.jpg');
     background-size: cover;
     background-position: center center;
 }
@@ -340,24 +380,160 @@
 .e-work-border{
     width: 80%;
     height: 80%;
-    border: 1px solid white;
+    border: 2px solid white;
     top:50%;
     left: 50%;
     transform: translate(-50%,-50%)
-}
+    }
 
-.e-work-line{
-    width: 100%;
-    border-top: 2px solid white;
-    transform: rotate(45deg);
-    top: 50%;
-}
-.e-work-line2{
-    width: 100%;
-    border-top: 2px solid white;
-    transform: rotate(-45deg);
-    top: 50%;
-}
+    .e-work-name{
+        font-size: 1.3rem;
+        font-weight: bold;
+        color: white;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%,-50%)
+    }
+
+    .e-work-line{
+        width: 80%;
+        border-top: 2px solid white;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%,-50%) rotate(-45deg);
+    }
+    .e-work-line2{
+        width: 80%;
+        border-top: 2px solid white;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%,-50%) rotate(45deg);
+    }
+
+    .e-work-box::after{
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        content: '';
+        display: block;
+        width: 1.5rem;
+        height: 1.5rem;
+        background: white;
+    }
+    .e-work-box2::after{
+        position: absolute;
+        bottom: 0px;
+        right: 0px;
+        content: '';
+        display: block;
+        width: 1.5rem;
+        height: 1.5rem;
+        background: white;
+    }
+
+    // !WORK 標題英文字
+    .e-work-title{
+        color: white;
+        bottom: 150px;
+        right: 400px;
+        font-size: 5.8rem;
+        text-align: right;
+    }
+
+    .e-work-title-cn{
+        font-size: 1.5rem;
+        font-weight: 500;
+
+    }
+
+    .e-work-title-dash{
+        margin-left: 19rem;
+    }
+
+    .e-work-title-dash::before{
+        position: absolute;
+        top: 1.3rem;
+        left: 10rem;
+        content: '';
+        display: block;
+        width: 280px;
+        height: 2px;
+        background: white;
+    }
+
+        //  WORK ARROW
+        .e-work-title::after{
+            position: absolute;
+            top: 230px;
+            content: '';
+            display: block;
+            width: 300px;
+            height: 2px;
+            background: white;
+            margin-left:400px;
+        }
+
+        .arrow-work-cap::after{
+            position: absolute;
+            top: 231px;
+            content: '';
+            display: block;
+            width: 80px;
+            height: 80px;
+            border-top: 2px solid white;
+            border-right: 2px solid white;
+            transform: translate(-50%, -50%) rotate(45deg);
+            margin-left:645px;
+        }
+
+        //  WORK ARROW
+        .e-work-title::after{
+            position: absolute;
+            left: 190px;
+            top: 175px;
+            content: '';
+            display: block;
+            width: 690px;
+            height: 2px;
+            background: white;
+            margin-left:400px;
+        }
+
+        .arrow-work-cap::after{
+            position: absolute;
+            top: 176px;
+            left: 580px;
+            content: '';
+            display: block;
+            width: 80px;
+            height: 80px;
+            border-top: 2px solid white;
+            border-right: 2px solid white;
+            transform: translate(-50%, -50%) rotate(45deg);
+            margin-left:645px;
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media screen and (max-width:576px) {
     .reduce-width{
@@ -394,7 +570,7 @@
 
     .e-hero-event-font{
         font-size: 20px;
-        font-weight: medium;
+        font-weight: 500;
         color: #81FC4D;
     }
 
@@ -452,18 +628,6 @@
     }
 
     // !EXHI
-
-    .spin-sentence{
-    font-size: 1.3rem;
-    word-wrap: normal;
-    margin: 10px 0 10px 0;
-}
-
-    .spin-sentence2{
-        font-size: 1.3rem;
-        color: #1D0AFF ;
-        margin: 10px 0 10px 0;
-    }
 
     .e-exhi-title{
         font-size: 2rem;
