event-location-start

--- a/src/pages/event/style/event.scss
+++ b/src/pages/event/style/event.scss
@@ -87,11 +87,6 @@
     width: 100%;
 }
 
-// ?Hero section card 寬度
-.e-hero-card{
-    width: 20%;
-}
-
 
 // ?方形透明圖
 .pic-square{
@@ -103,7 +98,7 @@
 }
 
 .e-hero-event-font{
-    font-size: 20px;
+    font-size: 1.3rem;
     font-weight: 500;
     color: #81FC4D;
 }
@@ -184,6 +179,10 @@
         color: white ;
         margin: 20px 0 20px 0;
     }
+
+.e-location-spin{
+    font-weight: 500;
+}
 
 // !EXHIBITION SECTION
 
@@ -511,6 +510,18 @@
             border-right: 2px solid white;
             transform: translate(-50%, -50%) rotate(45deg);
             margin-left:645px;
+        }
+
+        // !Event Location Section
+
+        .event-location{
+            background-color: #E8E8E8;
+        }
+
+        .e-location-spin{
+            border: 4px solid black;
+            border-left: 0px;
+            border-right: 0px;
         }
 
 
