--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -13,8 +13,17 @@
     src: url(../../../style/font/NotoSansTC-Medium.otf)
 }
 
-.homepageA-word, .homepageA-wordB  {
+.homepageA-word, .homepageA-wordB {
     font-family: NotoSansTC-Medium;
+}
+.homepage3-NewArrival{
+    font-family: Engravers;
+    font-size:6vw;
+    line-height: 90px;
+}
+.homepage3-word  {
+    font-family: NotoSansTC-Medium;
+    font-size: 1.5vw;
 }
 
 
@@ -205,4 +214,54 @@
     top: 35%;
     line-height: 140%;
     z-index: 999;
+}
+
+/* --------------------homepage3 */
+.pro-outside3 {
+    background-color: white;
+    width: calc(100vw - 70px);
+    height: 100vh;
+}
+.homepage3{
+    height: 100vh;
+    width: 86vw;
+    margin-left: 8%;
+    position: relative;
+}
+
+
+.homepage3-NewArrival-box{
+    position: absolute;
+    top:5%;
+    z-index: 999;
+}
+.homepage3-left-box{
+    background-color: aqua;
+    padding-top: 20%;
+    width: 40vw;
+    height: 100vh;
+    line-height: 5vh;
+}
+.homepage3-right-box{
+
+}
+
+.pro-arrow{
+}
+
+
+.slickWidth{
+    width: 62vw;
+    height: 0vh;
+}
+
+.slickPic-box{
+    width:30vw;
+    height:65vh;
+    overflow: hidden;
+}
+.slickPic img{
+    width:110%;
+    height: 110%;
+    margin-left: -10%;
 }
