nav spell correct

--- a/src/pages/event/style/event.scss
+++ b/src/pages/event/style/event.scss
@@ -524,6 +524,12 @@
             border-right: 0px;
         }
 
+        .e-location-title{
+            font-size: 2.5rem;
+            font-weight: 500;
+            border-bottom: 4px solid black;
+        }
+
 
 
 
