--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -235,18 +235,37 @@
     top:5%;
     z-index: 999;
 }
+.pro-green{
+    width:21vw;
+    height:10vh;
+    background-color: #81FC4D;
+    position: absolute;
+    top:22%;
+    transform: rotate(-10deg);
+}
 .homepage3-left-box{
-    background-color: aqua;
-    padding-top: 20%;
+    padding-top: 23%;
     width: 40vw;
     height: 100vh;
     line-height: 5vh;
 }
+.switchLeftRight{
+    margin-top:95%;
+    margin-left:30%;
+}
+
+.switchLeftRight button{
+    border: 1px solid black;
+    background-color: white;
+}
+
 .homepage3-right-box{
+    margin-top: 10%;
 
 }
 
 .pro-arrow{
+    margin-left: 28%;
 }
 
 
@@ -257,11 +276,11 @@
 
 .slickPic-box{
     width:30vw;
-    height:65vh;
+    height:70vh;
     overflow: hidden;
 }
 .slickPic img{
     width:110%;
-    height: 110%;
+    height: 100%;
     margin-left: -10%;
 }
