--- a/src/pages/event/style/event.scss
+++ b/src/pages/event/style/event.scss
@@ -181,6 +181,8 @@
     }
 
 .e-location-spin{
+    font-size: 4rem;
+    margin: 20px 0 20px 0;
     font-weight: 500;
 }
 
@@ -528,6 +530,10 @@
             font-size: 2.5rem;
             font-weight: 500;
             border-bottom: 4px solid black;
+        }
+        .e-local-logo{
+            writing-mode: vertical-rl;
+            font-size: 8.1rem;
         }
 
 
