--- a/src/pages/event/style/event.scss
+++ b/src/pages/event/style/event.scss
@@ -532,8 +532,11 @@
             border-bottom: 4px solid black;
         }
         .e-local-logo{
-            writing-mode: vertical-rl;
-            font-size: 8.1rem;
+            width: 80%;
+        }
+
+        .e-location-card{
+            
         }
 
 
