--- a/src/pages/event/style/fontAndBtn.scss
+++ b/src/pages/event/style/fontAndBtn.scss
@@ -24,4 +24,23 @@
     font-family: Engravers-Bold;
 }
 
+// btn 大(200 x 52)中(150 x 50)小( 98X38 )
+.e-btn-s{
+    background-color: transparent;
+    width: 93px;
+    height: 38px;
+}
+
+.e-btn-m{
+    background-color: transparent;
+    width: 150px;
+    height: 50px;
+}
+
+.e-btn-l{
+    background-color: transparent;
+    width: 200px;
+    height: 52px;
+}
+
 
