--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -250,6 +250,7 @@
     padding-top: 23%;
     width: 40vw;
     height: 100vh;
+    position: relative;
 }
 
 .homepage3-NewArrival{
@@ -266,6 +267,17 @@
     background-color: white;
 } */
 
+.switchLeftBtn{
+    position: absolute;
+    top: 85%;
+    left: 37%;
+}
+.switchRightBtn{
+    position: absolute;
+    top: 85%;
+    left: 62%;
+}
+
 .homepage3-right-box{
     margin-top: 10%;
 
@@ -278,19 +290,27 @@
 .slick-prev{
     width: 80px;
     height: 80px;
-    top:80%;
+    top:90%;
     /* left: -30%; */
     left: -230px;
     border:1px solid black;
+    border-right: 0;
+}
+.slick-prev:before {
+
+}
+.slick-prev:hover{
+    color:transparent
 }
 
 .slick-next{
     width: 80px;
     height: 80px;
-    top:80%;
+    top:90%;
     /* left: -20%; */
     left: -150px;
     border:1px solid black;
+
 }
 
 
