--- a/src/pages/event/style/event.scss
+++ b/src/pages/event/style/event.scss
@@ -8,6 +8,10 @@
     padding-left: 70px;
 }
 
+.e-local-log-pic{
+    width: 100%;
+}
+
 
 
 
@@ -532,7 +536,11 @@
             border-bottom: 4px solid black;
         }
         .e-local-logo{
-            width: 80%;
+            border-left: 4px solid black;
+        }
+        
+        .e-city-area{
+            border-top: 4px solid black;
         }
 
         .e-location-card{
@@ -547,11 +555,22 @@
         .e-locaton-btn{
             border: 4px solid black;
             border-top: 0px;
+            border-bottom: 0px;
             width: 100%;
             height: 64px;
             font-size: 1.8rem;
             font-weight: bold;
 
+        }
+
+        .e-location-more-btn{
+            height: 80px;
+            border: 0px;
+            border-top: 4px solid black;
+            font-size: 2rem;
+            width: 100%;
+            background-color: black;
+            color: white;
         }
 
 
