--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -8,10 +8,18 @@
     src:url(../../style/font/EngraversMTBold.ttf);
     }
     
-    /* @font-face {
+    @font-face {
     font-family: NotoSansTC-md;
     src:url(../../style/font/NotoSansTC-Medium.otf);
-    } */
+    }
+
+    .notoSansTC-md{
+        font-family: NotoSansTC-md;
+    }
+
+    .engravers{
+        font-family: Engravers;
+    }
 
     /* body {
         width: 100%;
@@ -27,7 +35,7 @@
 
     .index-video {
     position: absolute;
-    z-index: -1000;
+    z-index: -1;
     top: 0;
     left: 0;
     width: 100%;
@@ -110,7 +118,7 @@
 
     .news-hl{
         position:absolute;
-        /*z-index: -1;*/ /*TODO: Zindex not working*/
+        /*z-index: -1;*//*TODO: Zindex not working*/
         top:43vh;
         left:30vh;
         width: 30vh;
@@ -372,11 +380,11 @@
 
 /* ----------product 卡片區 -----------*/
 
-.index-card-rect{
-    width: 100%;
-    height: 1vh;
-    background: #000;
-}
+    .index-card-rect{
+        width: 100%;
+        height: 1vh;
+        background: #000;
+    }
 
     .product-card{
         position: relative;
@@ -385,6 +393,14 @@
 
     .product-card-wrap{
         margin-bottom: 100px;
+    }
+
+    .indexACC{
+        font-family: Engravers;
+        font-size:4rem;
+        text-align: center;
+        border-top: 2px solid #000;
+        border-bottom: 2px solid #000;
     }
 
     .product-card-wrap img{
@@ -434,9 +450,10 @@
         padding-bottom: 10px;
         font-family: NotoSansTC;
         font-weight: 900;
-        background: #000;color:#81FC4D;
+        background: #000;
+        color:#81FC4D;
         border: 1px solid #E8E8E8;
-        font-size: 1rem;
+        font-size: 2rem;
     }
 
     .auction-title-tc{
