--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -13,9 +13,9 @@
   src: url(../../../style/font/NotoSansTC-Medium.otf);
 }
 
-
 .u-body {
   background-color: #e8e8e8;
+  min-height: 150vh;
 }
 
 .u-container-fluid {
@@ -27,7 +27,6 @@
 }
 
 //----- carousel -----
-
 .u-img-carousel {
   position: relative;
   margin-top: 90px;
