--- a/src/pages/user/styles/MsgEdit.scss
+++ b/src/pages/user/styles/MsgEdit.scss
@@ -1,5 +1,6 @@
 // ===== Menu =====
 .u-userMenu {
+  margin-top: 30px;
   margin-left: 70px;
 }
 
@@ -47,6 +48,7 @@
 /* =====btn 自訂顏色===== */
 .u-editBtn > .btn-outline-dark {
   margin-left: 190px;
+  margin-bottom: 30px;
   width: 130px;
   height: 50px;
   font-family: 'Noto Sans TC', sans-serif;
@@ -87,6 +89,7 @@
   font-family: 'Noto Sans TC', sans-serif;
   font-size: 16px;
   border-radius: 3px;
+  margin-top: 5px;
 }
 
 .u-form1 > label {
