--- a/src/pages/user/styles/PwdEdit.scss
+++ b/src/pages/user/styles/PwdEdit.scss
@@ -18,7 +18,7 @@
   border-color: #000;
 }
 
-.u-userMsg, .u-userPwd {
+.u-usertitleLeft, .u-usertitleRight {
   margin-top: 10px;
   margin-bottom: 10px;
   width: 480px;
@@ -27,18 +27,18 @@
   line-height: 60px;
 }
 
-.u-userPwd {
+.u-usertitleRight {
   background-color: #000;
 }
 
-.u-userPwd > a{
+.u-usertitleRight > a{
   font-family: 'Noto Sans TC', sans-serif;
   font-size: 30px;
   color:#fff;
   text-decoration: none;
 }
 
-.u-userMsg > a { 
+.u-usertitleLeft > a { 
   font-family: 'Noto Sans TC', sans-serif;
   font-size: 30px;
   color: #000;
