--- a/src/pages/user/styles/OrderPro.scss
+++ b/src/pages/user/styles/OrderPro.scss
@@ -91,6 +91,8 @@
     width: 1044px;
     height: 195px;
     border: 2px solid #707070;
+    font-size: 16px;
+    font-family: NotoSansTC-Medium;
 }
 
 .u-th {
