--- a/src/pages/user/styles/Ticket.scss
+++ b/src/pages/user/styles/Ticket.scss
@@ -14,7 +14,7 @@
     width: 480px;
     height: 70px;
     text-align: center;
-    line-height: 60px;
+    line-height: 70px;
 }
 
 .u-userEve {
@@ -84,4 +84,20 @@
     position: absolute;
     top: 135px;
     right: 50px;
+  }
+
+  .u-link2 {
+    color: #000;
+  }
+
+  .u-link2:hover{
+    color:#000;
+  }
+
+  .u-link3 {
+    color: #fff;
+  }
+
+  .u-link3:hover{
+    color:#fff;
   }
