--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -289,10 +289,11 @@
 }
 
 
+
 .slick-prev:before{
     content: url('/src/pages/product/svg/leftArrow.svg');
-    max-width: 10px;
-    max-height: 10px;
+    width: 0px;
+    height: 0px;
     
     
     }
@@ -302,11 +303,11 @@
 }
 
 .slick-prev{
-    width: 80px;
-    height: 80px;
+    width: 5vw;
+    height: 8vh;
     top:90%;
-    /* left: -30%; */
-    left: -230px;
+    left: -28%;
+    /* left: -230px; */
     border:1px solid black;
     border-right: 0;
 }
@@ -316,11 +317,11 @@
 }
 
 .slick-next{
-    width: 80px;
-    height: 80px;
+    width: 5vw;
+    height: 8vh;
     top:90%;
-    /* left: -20%; */
-    left: -150px;
+    left: -20%;
+    /* left: -150px; */
     border:1px solid black;
 
 }
