--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -258,12 +258,17 @@
 
 }
 
-
+.slickWidth{
+    width: 62vw;
+    height: 82vh;
+    margin-left: 3%;
+    position: relative;
+}
 
 
 
 /* cautionnnnnnnnnn switchBtn*/
-/* .switchLeftBtn{
+.switchLeftBtn{
     position: absolute;
     top: 71%;
     left: -220px;
@@ -274,7 +279,7 @@
     top: 405px;
     left: -145px;
     z-index: 1000;
-} */
+}
 /* cautionnnnnnnnnn */
 
 
@@ -290,7 +295,7 @@
 
 
 
-.slick-prev:before{
+/* .slick-prev:before{
     content: url('/src/pages/product/svg/leftArrow.svg');
     width: 0px;
     height: 0px;
@@ -300,7 +305,7 @@
 .slick-next:before{
     content: url('/src/pages/product/svg/rightArrow.svg');
 
-}
+} */
 
 .slick-prev{
     width: 5vw;
@@ -328,12 +333,6 @@
 
 
 
-.slickWidth{
-    width: 62vw;
-    height: 82vh;
-    margin-left: 3%;
-    position: relative;
-}
 
 .slickPic-box{
     width:30vw;
@@ -526,6 +525,9 @@ width:100%;
     height: 120%;
     margin-left: -7%;
 }
+/* --------slick end-------- */
+
+
 /* -----------homepage5------- */
 .pro-outside5{
     width: calc(100vw - 70px);
