--- a/src/pages/event/style/eventList.scss
+++ b/src/pages/event/style/eventList.scss
@@ -92,3 +92,39 @@ $egreylt: #E8E8E8;
     color: black;
     font-size: 2rem;
 }
+
+.ed-list-card > img{
+    border: 2px solid #707070;
+}
+
+.ed-list-card h6{
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+
+.ed-list-card p{
+    font-size: 1rem;
+    font-weight: normal;
+    color: #535353;
+    line-height: 1.2rem;
+    letter-spacing: 2px;
+}
+
+.ed-list-card span{
+    font-size: 1rem;
+    font-weight: normal;
+    color: #535353;
+    line-height: 1.2rem;
+    letter-spacing: 2px;
+}
+
+.ed-list-card button{
+    height: 100%;
+    border: 0px;
+    background-color: #535353;
+    color: white;
+}
+
+.ed-pagenum{
+    
+}
