--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -168,8 +168,13 @@
   font-size: 16px;
 }
 
-// ===== checkbox 樣式 =====
+.u-form > input:-webkit-autofill,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px #e8e8e8 inset;
+}
 
+// ===== checkbox 樣式 =====
 .u-checkbox > input[type='checkbox'] {
   margin-right: 15px;
   cursor: pointer;
