--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -461,13 +461,22 @@ width:100%;
 
 .pro-watchAll{
     background-color:black;
-    width: 6vw;
-    height: 50vh;
+    width: 7vw;
+    height: 50.5vh;
     position: absolute;
     top: 55%;
-    left: 110%;
+    left: 80%;
 }
 
+/* .pro-watchAllWord{
+    writing-mode:vertical-lr;
+    text-orientation:inherit;
+    color: white;
+    font-family: Engravers;
+    font-size:2rem;
+    margin: 0 auto;
+    margin-top: 70%;
+} */
 .pro-watchAllWord{
     writing-mode:vertical-lr;
     text-orientation:inherit;
@@ -475,7 +484,7 @@ width:100%;
     font-family: Engravers;
     font-size:2rem;
     margin: 0 auto;
-    padding-top:70%;
+    margin-top: 70%;
 }
 
 /* ---------slick start----- */
