--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -461,22 +461,22 @@ width:100%;
 
 .pro-watchAll{
     background-color:black;
-    width: 7vw;
+    width: 6vw;
     height: 50.5vh;
     position: absolute;
     top: 55%;
     left: 80%;
 }
-
-/* .pro-watchAllWord{
-    writing-mode:vertical-lr;
-    text-orientation:inherit;
-    color: white;
-    font-family: Engravers;
-    font-size:2rem;
-    margin: 0 auto;
-    margin-top: 70%;
+/* .pro-watchAll{
+    background-color:black;
+    width: 80px;
+    height: 465px;
+    position: absolute;
+    top: 58%;
+    left: 80%;
 } */
+
+
 .pro-watchAllWord{
     writing-mode:vertical-lr;
     text-orientation:inherit;
@@ -486,6 +486,34 @@ width:100%;
     margin: 0 auto;
     margin-top: 70%;
 }
+/* .pro-watchAllWord{
+    writing-mode:vertical-lr;
+    text-orientation:inherit;
+    color: white;
+    font-family: Engravers;
+    font-size:2rem;
+    padding: 70px 0 0 25px;
+    letter-spacing: 8px;
+} */
+@media (min-width: 1440px) {
+    .pro-watchAllWord{
+        writing-mode:vertical-lr;
+        text-orientation:inherit;
+        color: white;
+        font-family: Engravers;
+        font-size:2rem;
+        padding: 70px 0 0 25px;
+        letter-spacing: 8px;
+    }
+    .pro-watchAll{
+        background-color:black;
+        width: 80px;
+        height: 465px;
+        position: absolute;
+        top: 58%;
+        left: 80%;
+    }
+  }
 
 /* ---------slick start----- */
 
