--- a/src/pages/event/style/eventList.scss
+++ b/src/pages/event/style/eventList.scss
@@ -21,7 +21,7 @@ $eblue: #1D0AFF;
 $egreydk: #A7A7A7;
 $egreylt: #E8E8E8;
 
-// !HERO Section 輪播牆
+// !HERO Section
 
 .ed-hero{
     background-color: black;
@@ -126,5 +126,5 @@ $egreylt: #E8E8E8;
 }
 
 .ed-pagenum{
-    
+
 }
