--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -15,6 +15,11 @@
     src: url(../../../style/font/NotoSansTC-Medium.otf)
 }
 
+@font-face{
+    font-family: NotosansTC-Bold;
+    src: url(../../../style/font/NotoSansTC-Bold.otf);
+}
+
 .homepageA-word, .homepageA-wordB {
     font-family: NotoSansTC-Medium;
 }
@@ -599,6 +604,14 @@ width:100%;
     width:120%;
     height: 120%;
     margin-left: -7%;
+}
+
+.slickB1 p,.slickB2 p,.slickB3 p,.slickB4 p,.slickB5 p,.slickB6 p{
+    font-family:'NotosansTC-Bold';
+}
+.pro-dflex{
+    width:20vw;
+    justify-content: space-between;
 }
 /* --------slick end-------- */
 
