--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -619,6 +619,7 @@ width:100%;
 /* -----------homepage5------- */
 .pro-outside5{
     width: calc(100vw - 70px);
+    position: relative;
 }
 
 .pro-gray5{
@@ -630,15 +631,18 @@ width:100%;
 .homepage5-word {
     font-family: Engravers;
     font-size:5rem;
-    padding-top:17%;
-    padding-left:43%;
+    top:45%;
+    left: 32%;
+    position: absolute;
 }
 
 .homepage5-wordB{
     font-family: Engravers;
     font-size:5rem;
-    padding-top:2%;
-    padding-left:40%;
+    top:70%;
+    left: 30%;
+    position: absolute;
+
 }
 
 /* -----------homepage6------- */
