--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -608,11 +608,13 @@ width:100%;
 
 .slickB1 p,.slickB2 p,.slickB3 p,.slickB4 p,.slickB5 p,.slickB6 p{
     font-family:'NotosansTC-Bold';
+    font-size: 1rem;
 }
 .pro-dflex{
     width:20vw;
     justify-content: space-between;
 }
+
 /* --------slick end-------- */
 
 
@@ -677,6 +679,8 @@ width:100%;
     width: 25vw;
     height: 35vh;
     margin-left: 0%;
+    position: relative;
+
 }
 .homepage5-boxA img{
     width: 100%;
@@ -685,6 +689,8 @@ width:100%;
     width: 25vw;
     height: 35vh;
     margin-left: 1%;
+    position: relative;
+
 }
 .homepage5-boxB img{
     width: 100%;
@@ -693,6 +699,8 @@ width:100%;
     width: 25vw;
     height: 35vh;
     margin-left: 1%;
+    position: relative;
+
 }
 .homepage5-boxC img{
     width: 100%;
@@ -702,6 +710,8 @@ width:100%;
     height: 35vh;
     margin-left: 0%;
     margin-top: -1.75%;
+    position: relative;
+
 }
 .homepage5-boxD img{
     width: 100%;
@@ -711,6 +721,7 @@ width:100%;
     height: 35vh;
     margin-left: 1%;
     margin-top: -1.75%;
+    position: relative;
 
 }
 .homepage5-boxE img{
@@ -721,6 +732,7 @@ width:100%;
     height: 35vh;
     margin-left: 1%;
     margin-top: -1.75%;
+    position: relative;
 
 }
 .homepage5-boxF img{
@@ -737,24 +749,30 @@ width:100%;
         width: 22vw;
         height: 35vh;
         margin-left: 0%;
+        position: relative;
     }
 
     .homepage5-boxB{
         width: 22vw;
         height: 35vh;
         margin-left: 1%;
+        position: relative;
+
     }
   
     .homepage5-boxC{
         width: 22vw;
         height: 35vh;
         margin-left: 1%;
+        position: relative;
+
     }
 
     .homepage5-boxD{
         width: 22vw;
         height: 35vh;   
         margin-top: 0;
+        position: relative;
   
     }
 
@@ -763,8 +781,7 @@ width:100%;
         height: 35vh;
         margin-left: 1%;
         margin-top: 0;
-
-    
+        position: relative;
     }
 
     .homepage5-boxF{
@@ -772,12 +789,50 @@ width:100%;
         height: 35vh;
         margin-left: 1%;
         margin-top: 0;
-
+        position: relative;
     }
-
+    .homepage5-boxA-word, .homepage5-boxB-word, .homepage5-boxC-word, .homepage5-boxD-word, .homepage5-boxE-word{
+        font-family: NotoSansTC-Medium;
+        font-size: 1.2rem;
+        position: absolute;
+        bottom:15%;
+        left: calc(50% - 28px);
+        padding-bottom: 5px;
+        border-bottom: 1px solid black;
+        color: black;
+    }
+    .homepage5-boxF-word{
+        font-family: NotoSansTC-Medium;
+        font-size: 1.2rem;
+        position: absolute;
+        bottom:15%;
+        left: calc(50% - 48px);
+        padding-bottom: 5px;
+        border-bottom: 1px solid black;
+        color: black;
+    }
 }
 
-
+.homepage5-boxA-word, .homepage5-boxB-word, .homepage5-boxC-word, .homepage5-boxD-word, .homepage5-boxE-word{
+    font-family: NotoSansTC-Medium;
+    font-size: 1.2rem;
+    position: absolute;
+    bottom:15%;
+    left: calc(50% - 28px);
+    padding-bottom: 5px;
+    border-bottom: 1px solid black;
+    color: black;
+}
+.homepage5-boxF-word{
+    font-family: NotoSansTC-Medium;
+    font-size: 1.2rem;
+    position: absolute;
+    bottom:15%;
+    left: calc(50% - 48px);
+    padding-bottom: 5px;
+    border-bottom: 1px solid black;
+    color: black;
+}
 
 /* -----------homepage6------- */
 .pro-outside6{
